--- a/Занятие1/Лабораторные задания/task1_1/task-info.yaml
+++ b/Занятие1/Лабораторные задания/task1_1/task-info.yaml
@@ -23,14 +23,14 @@ files:
     selected: false
     status: Solved
     encrypted_possible_answer: 'int(input("Текущий год: "))'
-  - offset: 318
-    length: 55
+  - offset: 319
+    length: 0
     placeholder_text: '# TODO посчитать и распечатать количество прожитых дней'
     initial_state:
       length: 55
       offset: 174
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Solved
     encrypted_possible_answer: |-
       days = (current_year - start_year) * DAYS_OF_YEAR
