--- a/Занятие1/Домашнее_задание/task4/task-info.yaml
+++ b/Занятие1/Домашнее_задание/task4/task-info.yaml
@@ -1,11 +1,13 @@
 type: theory
 files:
-- name: main.py
-  visible: true
-  learner_created: false
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+- name: main.py
+  visible: true
+  learner_created: false
+status: Solved
+feedback:
+  time: Thu, 21 Oct 2021 15:35:03 UTC
 record: -1
 post_submission_on_open: true
