--- a/Занятие1/Домашнее_задание/task2/task-info.yaml
+++ b/Занятие1/Домашнее_задание/task2/task-info.yaml
@@ -9,5 +9,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Thu, 21 Oct 2021 15:06:59 UTC
 record: -1
 post_submission_on_open: true
