--- a/Занятие2/Лабораторные_задания/task2_3/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_3/task-info.yaml
@@ -9,15 +9,15 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 576
+  - offset: 667
     length: 38
     placeholder_text: '# TODO распечатать фамилии и их номера'
     initial_state:
       length: 38
       offset: 576
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Failed
     encrypted_possible_answer: '# TODO'
   text: |
     if __name__ == "__main__":
@@ -51,5 +51,34 @@ files:
 
         # TODO распечатать фамилии и их номера
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: Incorrect
+  time: Thu, 21 Oct 2021 17:18:12 UTC
+  actual: |
+    1 Иванов
+    2 Васильев
+    3 Петров
+    4 Смирнов
+    5 Михайлов
+    6 Фёдоров
+    7 Соколов
+    8 Яковлев
+    9 Попов
+    10 Андреев
+    11 Алексеев
+    12 Александров
+    13 Лебедев
+    14 Григорьев
+    15 Степанов
+    16 Семёнов
+    17 Павлов
+    18 Богданов
+    19 Николаев
+    20 Дмитриев
+    21 Егоров
+    22 Волков
+    23 Кузнецов
+    24 Никитин
+    25 Соловьёв
 record: -1
