--- a/Занятие2/Практические_задания/task3_4/task-info.yaml
+++ b/Занятие2/Практические_задания/task3_4/task-info.yaml
@@ -4,55 +4,55 @@ files:
   visible: true
   placeholders:
   - offset: 8
-    length: 82
+    length: 124
     placeholder_text: '...  # TODO запросить месяц у пользователя. Номер месяца -
       целочисленное значение!'
     initial_state:
       length: 82
       offset: 8
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: int(input())
-  - offset: 105
-    length: 3
+  - offset: 147
+    length: 7
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 105
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 3, 4, 5
-  - offset: 145
-    length: 3
+  - offset: 191
+    length: 7
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 145
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 6, 7, 8
-  - offset: 184
-    length: 3
+  - offset: 234
+    length: 9
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 184
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 9, 10, 11
-  - offset: 224
-    length: 3
+  - offset: 280
+    length: 8
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 224
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 12, 1, 2
   text: |
     mount = ...  # TODO запросить месяц у пользователя. Номер месяца - целочисленное значение!
@@ -69,6 +69,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Thu, 21 Oct 2021 16:15:34 UTC
 record: -1
 post_submission_on_open: true
