--- a/Занятие2/Практические_задания/task3_5/task-info.yaml
+++ b/Занятие2/Практические_задания/task3_5/task-info.yaml
@@ -3,7 +3,7 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 21
+  - offset: 246
     length: 70
     placeholder_text: '# TODO напишите с помощью if-elif-else условие проверки скорости
       ветра'
@@ -12,7 +12,7 @@ files:
       offset: 21
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: '# TODO'
   text: |
     wind = int(input())
@@ -22,6 +22,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Thu, 21 Oct 2021 16:19:41 UTC
 record: -1
 post_submission_on_open: true
