--- a/Занятие2/Практические_задания/task4_1/task-info.yaml
+++ b/Занятие2/Практические_задания/task4_1/task-info.yaml
@@ -43,36 +43,36 @@ files:
   visible: true
   placeholders:
   - offset: 157
-    length: 39
+    length: 44
     placeholder_text: '... # TODO как получить первый элемент?'
     initial_state:
       length: 39
       offset: 157
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: list_[0]
-  - offset: 334
-    length: 34
+  - offset: 339
+    length: 36
     placeholder_text: '...:  # TODO где будем перебирать?'
     initial_state:
       length: 34
       offset: 334
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 'list_:'
-  - offset: 645
-    length: 29
+  - offset: 652
+    length: 51
     placeholder_text: '...:  # TODO записать условие'
     initial_state:
       length: 29
       offset: 645
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 'current_value < min_value:'
-  - offset: 740
+  - offset: 769
     length: 34
     placeholder_text: '# TODO  если нашли, то что делаем?'
     initial_state:
@@ -80,7 +80,7 @@ files:
       offset: 740
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: min_value = current_value
   text: |
     if __name__ == "__main__":
@@ -108,5 +108,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 21 Oct 2021 16:22:07 UTC
 record: -1
