--- a/Занятие2/Лабораторные_задания/task1_1/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task1_1/task-info.yaml
@@ -3,15 +3,15 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 0
-    length: 6
+  - offset: 7
+    length: 36
     placeholder_text: '# TODO'
     initial_state:
       length: 6
       offset: 0
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       a = int(input("Введите число "))
 
@@ -26,6 +26,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Thu, 21 Oct 2021 16:49:32 UTC
 record: -1
 post_submission_on_open: true
