--- a/Занятие2/Лабораторные_задания/task2_1/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_1/task-info.yaml
@@ -12,34 +12,34 @@ files:
   visible: true
   placeholders:
   - offset: 46
-    length: 31
+    length: 29
     placeholder_text: '...  # TODO количество ступеней'
     initial_state:
       length: 31
       offset: 46
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: 4
-  - offset: 91
-    length: 51
+  - offset: 89
+    length: 74
     placeholder_text: '...:  # TODO как получить последовательность чисел?'
     initial_state:
       length: 51
       offset: 91
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: 'range(1, count_stairs + 1):'
-  - offset: 156
-    length: 28
+  - offset: 177
+    length: 32
     placeholder_text: '(...)  # TODO печать ступени'
     initial_state:
       length: 28
       offset: 156
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: ("*" * i)
   text: |
     if __name__ == "__main__":
@@ -50,5 +50,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 21 Oct 2021 17:11:33 UTC
 record: -1
