--- a/Занятие2/Лабораторные_задания/task2_2/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_2/task-info.yaml
@@ -9,17 +9,17 @@ files:
   visible: true
   placeholders:
   - offset: 38
-    length: 40
+    length: 38
     placeholder_text: '...  # TODO заводим переменную для суммы'
     initial_state:
       length: 40
       offset: 38
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: 0
-  - offset: 98
-    length: 39
+  - offset: 96
+    length: 66
     placeholder_text: |-
       ...:  # TODO диапазон чисел
               ...
@@ -27,12 +27,12 @@ files:
       length: 39
       offset: 98
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       range(10):
               sum_ += number
-  - offset: 143
+  - offset: 183
     length: 21
     placeholder_text: '# TODO печатаем ответ'
     initial_state:
@@ -40,7 +40,7 @@ files:
       offset: 143
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: print(sum_)
   text: |
     if __name__ == "__main__":
@@ -54,5 +54,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 21 Oct 2021 17:16:01 UTC
 record: -1
