--- a/Занятие2/Лабораторные_задания/task2_4/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_4/task-info.yaml
@@ -6,7 +6,7 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 164
+  - offset: 356
     length: 34
     placeholder_text: '# TODO Распечатать строку лесенкой'
     initial_state:
@@ -14,7 +14,7 @@ files:
       offset: 164
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Failed
     encrypted_possible_answer: '...'
   text: |
     if __name__ == "__main__":
@@ -25,5 +25,11 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: Incorrect
+  time: Thu, 21 Oct 2021 17:28:16 UTC
+  actual: "     H\n      e\n       l\n        l\n         o\n          ,\n       \
+    \     \n            w\n             o\n              r\n               l\n   \
+    \             d\n"
 record: -1
