--- a/Занятие2/Практические_задания/task1_4/task-info.yaml
+++ b/Занятие2/Практические_задания/task1_4/task-info.yaml
@@ -9,24 +9,24 @@ files:
   visible: true
   placeholders:
   - offset: 12
-    length: 41
+    length: 46
     placeholder_text: '...  # TODO запишите логическое выражение'
     initial_state:
       length: 41
       offset: 12
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: 20 <= 11
-  - offset: 61
-    length: 3
+  - offset: 66
+    length: 9
     placeholder_text: '...'
     initial_state:
       length: 3
       offset: 61
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: condition
   text: |
     condition = ...  # TODO запишите логическое выражение
@@ -36,5 +36,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 21 Oct 2021 15:46:32 UTC
 record: -1
