--- a/Занятие2/Практические_задания/task2_5/task-info.yaml
+++ b/Занятие2/Практические_задания/task2_5/task-info.yaml
@@ -18,5 +18,10 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 21 Oct 2021 16:03:09 UTC
 record: -1
+selected_options:
+- 0
