--- a/Занятие2/Лабораторные_задания/task2_5/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_5/task-info.yaml
@@ -35,5 +35,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Fri, 22 Oct 2021 17:03:32 UTC
 record: -1
 post_submission_on_open: true
