--- a/Занятие2/Домашнее задание/task2/task-info.yaml
+++ b/Занятие2/Домашнее задание/task2/task-info.yaml
@@ -9,14 +9,14 @@ files:
   visible: true
   placeholders:
   - offset: 110
-    length: 12
+    length: 19
     placeholder_text: '...)  # TODO'
     initial_state:
       length: 12
       offset: 110
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: min(list_))
   text: |
     if __name__ == "__main__":
@@ -26,5 +26,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 22 Oct 2021 17:27:36 UTC
 record: -1
