--- a/Занятие2/Домашнее задание/task3/task-info.yaml
+++ b/Занятие2/Домашнее задание/task3/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 0
-    length: 6
+    length: 455
     placeholder_text: '# TODO'
     initial_state:
       length: 6
       offset: 0
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: |-
       a = int(input('Введите число '))
       b = int(input('Введите число '))
@@ -31,6 +31,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Fri, 22 Oct 2021 18:10:53 UTC
 record: -1
 post_submission_on_open: true
