--- a/Занятие2/Домашнее задание/task4/task-info.yaml
+++ b/Занятие2/Домашнее задание/task4/task-info.yaml
@@ -10,6 +10,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Fri, 22 Oct 2021 18:39:09 UTC
 record: -1
 post_submission_on_open: true
