--- a/Занятие2/Лабораторные_задания/task2_4/task-info.yaml
+++ b/Занятие2/Лабораторные_задания/task2_4/task-info.yaml
@@ -6,14 +6,14 @@ files:
 - name: main.py
   visible: true
   placeholders:
-  - offset: 356
-    length: 34
+  - offset: 217
+    length: 0
     placeholder_text: '# TODO Распечатать строку лесенкой'
     initial_state:
       length: 34
       offset: 164
     initialized_from_dependency: false
-    selected: true
+    selected: false
     status: Failed
     encrypted_possible_answer: '...'
   text: |
@@ -28,28 +28,8 @@ files:
 status: Failed
 feedback:
   message: Incorrect
-  time: Thu, 21 Oct 2021 17:39:18 UTC
-  actual: |2
-         H
-          e
-           l
-            l
-             o
-              ,
-               w
-                o
-                 r
-                  l
-                   d
-         H
-          e
-           l
-            l
-             o
-              ,
-               w
-                o
-                 r
-                  l
-                   d
+  time: Fri, 22 Oct 2021 17:14:38 UTC
+  actual: "     H\n      e\n       l\n        l\n         o\n          ,\n       \
+    \     \n            w\n             o\n              r\n               l\n   \
+    \             d\n"
 record: -1
