--- a/Занятие3/Практические_задания/task2_1/task-info.yaml
+++ b/Занятие3/Практические_задания/task2_1/task-info.yaml
@@ -11,7 +11,7 @@ files:
       offset: 83
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: |-
       result = 1
 
@@ -35,6 +35,6 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
 post_submission_on_open: true
