--- a/Занятие3/Практические_задания/task3_1/task-info.yaml
+++ b/Занятие3/Практические_задания/task3_1/task-info.yaml
@@ -4,14 +4,14 @@ files:
   visible: true
   placeholders:
   - offset: 33
-    length: 84
+    length: 111
     placeholder_text: '...  # TODO с помощью методов строки join и split очистить
       строку от лишних пробелов'
     initial_state:
       length: 84
       offset: 33
     initialized_from_dependency: false
-    selected: false
+    selected: true
     status: Solved
     encrypted_possible_answer: |-
       words_list = str_.split(" ")
@@ -37,5 +37,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Sun, 24 Oct 2021 23:44:52 UTC
 record: -1
 post_submission_on_open: true
