--- a/Занятие3/Практические_задания/task1_4/task-info.yaml
+++ b/Занятие3/Практические_задания/task1_4/task-info.yaml
@@ -18,5 +18,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Sun, 24 Oct 2021 19:00:32 UTC
 record: -1
 post_submission_on_open: true
