--- a/Занятие3/Лабораторные_задания/task1_6/task-info.yaml
+++ b/Занятие3/Лабораторные_задания/task1_6/task-info.yaml
@@ -10,6 +10,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Mon, 25 Oct 2021 23:04:25 UTC
 record: -1
 post_submission_on_open: true
