--- a/Занятие3/Практические_задания/task1_1/task-info.yaml
+++ b/Занятие3/Практические_задания/task1_1/task-info.yaml
@@ -4,7 +4,7 @@ files:
   visible: true
   placeholders:
   - offset: 343
-    length: 28
+    length: 39
     placeholder_text: '...  # TODO вызвать функцию'
     initial_state:
       length: 27
@@ -33,5 +33,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Sat, 23 Oct 2021 07:45:48 UTC
 record: -1
 post_submission_on_open: true
