--- a/Занятие4/Практические_задания/task2_1/task-info.yaml
+++ b/Занятие4/Практические_задания/task2_1/task-info.yaml
@@ -17,6 +17,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Sat, 30 Oct 2021 07:23:16 UTC
 record: -1
 post_submission_on_open: true
