--- a/Занятие4/Практические_задания/task3_1/task-info.yaml
+++ b/Занятие4/Практические_задания/task3_1/task-info.yaml
@@ -11,17 +11,17 @@ files:
       offset: 115
     initialized_from_dependency: false
     selected: false
-    status: Unchecked
+    status: Solved
     encrypted_possible_answer: sum_ = 0
-  - offset: 229
-    length: 35
+  - offset: 292
+    length: 65
     placeholder_text: '# TODO посчитать через метод values'
     initial_state:
       length: 35
       offset: 229
     initialized_from_dependency: false
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
     encrypted_possible_answer: print(sum(cart.values()))
   text: |
     if __name__ == "__main__":
@@ -40,6 +40,8 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Sat, 30 Oct 2021 07:28:46 UTC
 record: -1
 post_submission_on_open: true
