--- a/Занятие4/Практические_задания/task3_1/task-info.yaml
+++ b/Занятие4/Практические_задания/task3_1/task-info.yaml
@@ -13,14 +13,14 @@ files:
     selected: false
     status: Solved
     encrypted_possible_answer: sum_ = 0
-  - offset: 292
-    length: 65
+  - offset: 229
+    length: 35
     placeholder_text: '# TODO посчитать через метод values'
     initial_state:
       length: 35
       offset: 229
     initialized_from_dependency: false
-    selected: true
+    selected: false
     status: Solved
     encrypted_possible_answer: print(sum(cart.values()))
   text: |
@@ -42,6 +42,6 @@ files:
   learner_created: false
 status: Solved
 feedback:
-  time: Sat, 30 Oct 2021 07:28:46 UTC
+  time: Mon, 01 Nov 2021 20:19:47 UTC
 record: -1
 post_submission_on_open: true
