--- a/Занятие4/Лабораторные_задания/task3_1/task-info.yaml
+++ b/Занятие4/Лабораторные_задания/task3_1/task-info.yaml
@@ -42,5 +42,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Mon, 01 Nov 2021 21:52:43 UTC
 record: -1
 post_submission_on_open: true
