--- a/Занятие4/Домашнее_задание/task4/task-info.yaml
+++ b/Занятие4/Домашнее_задание/task4/task-info.yaml
@@ -11,5 +11,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Mon, 01 Nov 2021 22:39:39 UTC
 record: -1
 post_submission_on_open: true
