--- a/Занятие5/Домашнее_задание/task1/task-info.yaml
+++ b/Занятие5/Домашнее_задание/task1/task-info.yaml
@@ -11,5 +11,7 @@ files:
   visible: false
   learner_created: false
 status: Solved
+feedback:
+  time: Fri, 05 Nov 2021 21:08:44 UTC
 record: -1
 post_submission_on_open: true
